2004-02-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Relationship.py: Factor out relationship distance computation.
	* src/plugins/rel_ru.py: Use self.get_distance(). 
	* src/plugins/rel_de.py: Use self.get_distance(). 
	* configure.in, configure: Change version.
	* src/plugins/rel_hu.py: Convert to class.

2004-02-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/Relationship.py: more fixes
	* src/gramps_main.py: changed db on relationship calculator when db changes.

2004-02-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Relationship.py: More corrections.
	* src/plugins/rel_ru.py: Corrections. 
	* src/gramps_main.py: Corrections. 
	* src/plugins/Ancestors.py: Use get_grandparents_string which is
	registered in Plugins (possibly from the relationship calculator).
	* src/plugins/rel_de.py: Implement get_parents().

2004-02-15  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/RelCalc.py: Handle IDs properly
	* src/Relationship.py: Handle IDs properly
	* src/home.png: added new default person icon

2004-02-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DetDescendantReport.py: Add style descriptions
	for the paragraphs. Add first entry style. Change defaults to be
	similar to the FTM style reports. 
	* src/plugins/DetAncestralReport.py: Add style descriptions
	for the paragraphs. Add first entry style. Change defaults to be
	similar to the FTM style reports. 
	* src/StyleEditor.py (draw, save_paragraph): Allow users
	to adjust first line indent.
	* src/styles.glade: Add first line indent entry.
	* src/plugins/Check.py (delete_empty_family): Remove families
	in which person is a parent, not only a child. 
	* src/gramps_main.py (post_load): Use display_frel and 
	display_fattr.
	* src/MediaView.py (key_press): Add function.
	* src/PlaceView.py (key_press): Add function.
	* src/SourceView.py (key_press): Add function.
	* src/plugins/WebPage.py: Add tab with index page options.
	* src/sort: Typos. 
